1. Метод .of [#353129]