@@ -1,25 +1,23 @@
 package ru.job4j.collection;
 
 import org.junit.Test;
-
 import java.util.*;
-
 import static org.hamcrest.Matchers.is;
-import static org.junit.Assert.assertThat;
+import static org.hamcrest.MatcherAssert.assertThat;
 
 public class DepartmentsTest {
     @Test
     public void whenMissed() {
         List<String> input = Collections.singletonList("k1/sk1");
-        List<String> expect = Arrays.asList("k1", "k1/sk1");
+        List<String> expect = List.of("k1", "k1/sk1");
         List<String> result = Departments.fillGaps(input);
         assertThat(result, is(expect));
     }
 
     @Test
     public void whenNonChange() {
-        List<String> input = Arrays.asList("k1", "k1/sk1");
-        List<String> expect = Arrays.asList("k1", "k1/sk1");
+        List<String> input = List.of("k1", "k1/sk1");
+        List<String> expect = List.of("k1", "k1/sk1");
         List<String> result = Departments.fillGaps(input);
         assertThat(result, is(expect));
     }
@@ -27,7 +25,7 @@ public class DepartmentsTest {
    @Test
     public void whenSortAsc() {
 
-       List<String> input = Arrays.asList("K2",
+       List<String> input = List.of("K2",
                 "K2/SK1",
                 "K2/SK1/SSK1",
                 "K2/SK1/SSK2",
@@ -36,7 +34,7 @@ public class DepartmentsTest {
                 "K1/SK1/SSK1",
                 "K1/SK1/SSK2",
                 "K1/SK2");
-        List<String> expect = Arrays.asList("K1",
+        List<String> expect = List.of("K1",
                 "K1/SK1",
                 "K1/SK1/SSK1",
                 "K1/SK1/SSK2",
@@ -52,7 +50,7 @@ public class DepartmentsTest {
 
   @Test
     public void whenSortDesc() {
-        List<String> input = Arrays.asList("K1",
+        List<String> input = List.of("K1",
                 "K1/SK1",
                 "K1/SK1/SSK1",
                 "K1/SK1/SSK2",
@@ -61,7 +59,7 @@ public class DepartmentsTest {
                 "K2/SK1",
                 "K2/SK1/SSK1",
                 "K2/SK1/SSK2");
-        List<String> expect = Arrays.asList("K2",
+        List<String> expect = List.of("K2",
                 "K2/SK1",
                 "K2/SK1/SSK1",
                 "K2/SK1/SSK2",
